service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
spec:
  selector:
    app: chatbot
  type: ClusterIP # changed from LoadBalancer to ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
